Judger/run/node_1/compile.txt
Main.c:1:1: error: expected identifier or ‘(’ before numeric constant
 123123
 ^~~~~~
